[package]
name = "wicked64-arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sptr = "0.3.1"
wasmer = { version = "2.2.1", default-features = false, features = [
    "sys",
    "default-universal",
] }
anyhow = "1.0.56"
once_cell = "1.10.0"
parking_lot = "0.12.0"