[package]
name = "wicked64-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bitvec = "1.0.0"
once_cell = "1.10.0"
enum_dispatch = "0.3.8"
memmap2 = "0.5.5"

hashbrown = "0.12.0"
num_enum = "0.5.7"

anyhow = "1.0.56"
tracing = { version = "0.1.33", default-features = false, features = ["std"] }

[dev-dependencies]
tracing-subscriber = "0.3.11"