[package]
name = "w64-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
w64-codegen-macro = { path = "../macro" }
w64-codegen-types = { path = "../types" }
region = "3.0.0"
