[package]
name = "w64-codegen-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.98", features = ["full"], optional = true }
quote = { version = "1.0.20", optional = true }
proc-macro2 = { version = "1.0.43", optional = true }

[features]
default = []
macro = ["dep:syn", "dep:quote", "dep:proc-macro2"]
